Fix overlapping button width/margins in AfterActionReportScreen

--- a/code/UI/Gameplay/AfterActionReportScreen.razor.scss
+++ b/code/UI/Gameplay/AfterActionReportScreen.razor.scss
@@ -31,6 +31,13 @@ AfterActionReportScreen.menu {
 				flex-direction: row;
 				align-items: center;
 			}
+
+			.button {
+				flex-grow: 0;
+				flex-shrink: 0;
+				width: auto;
+				margin: 0 25px;
+			}
 		}
 	}
 
